# agentview

./: README.md  demo.py  demo.tape  example.py  minimal.tape  pyproject.toml
agentview/: __init__.py  __main__.py  claude_hook.py  cli.py  tracker.py
